Add errorMapping page in rk-tv
